tests/core/snapshots/inline-many.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  user: User
}

type User {
  city: String
  name: String
  street: String
  zipcode: String
}

schema {
  query: Query
}
