tests/core/snapshots/input-type-protected-error.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Input types can not be protected",
    "trace": [
      "tests/execution/input-type-protected-error.md 16#3"
    ],
    "description": null
  },
  {
    "message": "Input types can not be protected",
    "trace": [
      "tests/execution/input-type-protected-error.md 20#3"
    ],
    "description": null
  }
]
