tests/core/snapshots/introspection-query-with-disabled-introspection.md_1.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "me": {
        "id": 1,
        "name": "John Smith",
        "birthday": "2023-03-08T12:45:26-05:00"
      }
    }
  }
}
