tests/core/snapshots/introspection-query-with-disabled-introspection.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(introspection: false) @upstream(httpCache: 42) @link(src: "config.yml", type: Config) {
  query: Query
}

type Query {
  me: User! @http(url: "http://upstream/me")
}

type User {
  birthday: Date
  id: String
  name: String
}
