tests/core/snapshots/io-cache.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream(httpCache: 42) @link(src: "config.yml", type: Config) {
  query: Query
}

type Post {
  body: String!
  id: Int!
  title: String!
  user: User @http(url: "http://jsonplaceholder.typicode.com/users/{{.value.userId}}")
  userId: Int!
}

type Query {
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts")
}

type User {
  id: Int!
  name: String!
}
