tests/core/snapshots/js-directive.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "hello": {
        "name": "Leanne Graham"
      }
    }
  }
}
