tests/core/snapshots/js-directive.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  hello: User!
}

type User {
  id: Int!
  name: String!
}

schema {
  query: Query
}
